overflow fix

--- a/_sass/style.sass
+++ b/_sass/style.sass
@@ -15,6 +15,8 @@ html, body
 div.clearfix
   clear: both
 
+body
+  overflow-x: hidden
 
 @import "mixins"
 @import "colors"
